# ProbabilisticContactEstimation

./: .gitignore  CMakeLists.txt  README.md  package.xml
BashScripts/: imu.sh  ipconfig.sh
bags/: pce_probs.csv  plot_probs.py
data/: .~lock.atlas_1000hz_01ground.csv#  .~lock.dataset_spike_stroma.csv#  .~lock.realTALOS1.csv#  .~lock.talos_100hz.csv#  atlas_01ground.csv  atlas_03ground.csv  atlas_05ground.csv  atlas_1000hz_01ground_3steps.csv  dataset_spike_normal_surface.csv  dataset_spike_stroma.csv  dataset_spike_wd40_extra.csv  dataset_spike_white_surface.csv  info.txt  realTALOS1.csv  realTALOS1_IMU.csv  realTALOS2.csv  realTALOS2_IMU.csv  vel_500hz.csv
data/NAO/: LaccX.txt  LaccY.txt  LaccZ.txt  LgX.txt  LgZ.txt  LlegTime.txt  LorientY.txt  RgX.txt  RlegTime.txt  accX.txt  accY.txt  gX.txt  lfZ.txt  ltY.txt  rfZ.txt  rtX.txt  timeBase.txt
data/fifth_WS1/: LgY.txt  LorientX.txt  LorientZ.txt  RaccX.txt  RaccY.txt  RaccZ.txt  RgY.txt  RgZ.txt  RorientX.txt  RorientY.txt  RorientZ.txt  accZ.txt  gY.txt  ltX.txt  ltZ.txt  rfX.txt  rtY.txt  rtZ.txt
include/: pce.h  pce_params.h
launch/: slip_experiment.launch
offline/data/: .~lock.go1_matress.csv#  .~lock.go1_matress_test.csv#  ATLAS_01ground.csv  ATLAS_01ground_003slip.csv  ATLAS_01ground_3steps.csv  GO1_matress.csv  GO1_normal_surface.csv  GO1_slippery_surface.csv  REALgo1.csv  atlas_1000hz_01gr_003road.csv  atlas_1000hz_01ground.csv  atlas_500hz_02ground.csv  dataset_spike_stroma.csv  dataset_spike_wd40_extra.csv  dataset_spike_white_surface.csv  go1_1000hz.csv  info.txt
offline/src/: atlas_contact_estimation.py  cdf_go1.py  contact_atlas.py  contact_talos.py  go1_contact_estimation.py  go1_matress.py  go1_matress_pce.py  go1_normal_surface.py  go1_slippery.py
src/: cdf.py  cdf_atlas.py  cdf_go1.py  ce.py  check_forces.cpp  checkpoint0.py  contact.py  contactTalos.py  contact_atlas.py  contact_estimation.cpp  friction.cpp  go1_matress.py  go1_normal_surface.py  go1_slippery.py  go1_white_wood.py  imuBias.txt  init_imu_force.cpp  kernel.py  main.cpp  pce.cpp  real_go1.py  slip_recovery.cpp  talos_1.py  talos_2.py  visualize.py
src/exe/: go1_pce.py  init_imu_force.cpp  slip_recovery.cpp
