cmake_minimum_required(VERSION 3.10)

project(probabilisticcontactestimation_cpp)
add_compile_options(-std=c++11 )
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/src/cmake")
find_package(Boost REQUIRED COMPONENTS system)
find_package(Eigen3 REQUIRED)
include_directories(${EIGEN3_INCLUDE_DIRS} -I/usr/include/eigen3 include kdepp/include/kdepp)
add_executable(pce_cpp src/main.cpp src/pce.cpp)
# target_link_directories(pce_cpp kdepp/include/kdepp)
